feat: store interface & new modules & executor fixes
- new modules: indexing.Simple, system.Reader
- simple workflow for indexing files in local directory

--- a/workflows.yaml
+++ b/workflows.yaml
@@ -10,3 +10,13 @@ workflows:
         operator: acc_stream
         args: 
           number: 129
+
+  index_local_files:
+    name: index_local
+    collection: awe_index
+    nodes:
+      - module: system.Reader
+        args:
+          path: ./files
+
+      - module: indexing.Simple
