feat: Gemini Segment Provider, Jina Segmenter improvements
- gemini segmenter is much slower and unreliable (LLM with structured
output)
- Jina segmented improvements made it slightly better, however the
quality is still not where it needs to be

--- a/workflows.yaml
+++ b/workflows.yaml
@@ -11,7 +11,7 @@ workflows:
 
   index_local_files:
     name: index_local
-    collection: awe_index
+    collection: awe_new
     nodes:
       - module: system.Reader
         args:
