feat: updates LMProvider interface
- changes CreateCompletionStream to Chat
- adds Generate function

--- a/workflows.yaml
+++ b/workflows.yaml
@@ -4,7 +4,7 @@ workflows:
     name: chat_basic
     nodes:
       - module: generation.Simple
-        operator: generate
+        operator: chat
 
       - module: system.Logger
         operator: acc_stream
